fixe overflow text in search result list

--- a/src/components/search/geosearch.scss
+++ b/src/components/search/geosearch.scss
@@ -17,6 +17,7 @@
 
         .searchTitle {
             font-size: 1.25em;
+            overflow-wrap: break-word;
         }
 
         .searchDesc {
